# hypermodern-tutorial

./: .coverage  .flake8  .gitignore  README.md  noxfile.py  pyproject.toml  win_setup.bat
src/hypermodern_tutorial/: console.py  wikipedia.py
tests/: conftest.py  test_console.py  test_wikipedia.py
