[tool.poetry]
name = "hypermodern-tutorial"
version = "0.1.0"
authors = ["Ken Roberts <kcr2@duke.edu>"]
description = "The hypermodern Python project"
license = "Apache"
readme = "README.md"
homepage = "https://github.com/kenroberts/hypermodern-tutorial"
repository = "https://github.com/kenroberts/hypermodern-python"
keywords = ["hypermodern"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.4"
requests = "^2.27.1"

[tool.poetry.scripts]
hypermodern-tutorial = "hypermodern_tutorial.console:main"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
